2006-11-19  Dalibor Topic  <robilad@kaffe.org>

	Fix for #76.

	* configure.ac: Check if lib(un)gif header is installed,
	when building kaffe X AWT and error out if it isn't.

2006-11-17  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW: Added port to GNU/kFreeBSD.

2006-11-17  Petr Salinger  <Petr.Salinger@seznam.cz>

	Added port to GNU/kFreeBSD.

	* config/config.alias: Added kfreebsd.

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c:
	(SCHEDULE_POLICY) Leave undefined for GNU/kFreeBSD.

	* config/i386/freebsd2/md.h: Add a little initialisation
	code for GNU/kFreeBSD.

	* kaffe/kaffevm/systems/unix-jthreads/config-jthreads.h:
	Set SP_OFFSET for GNU/kFreeBSD.

2006-11-12  Alexander Boettcher <alex@kaffe.org>

	* config/i386/drops/config.frag,
	  config/i386/drops/md.c,
	  config/i386/drops/md.h:
	dummy adaptation to uclibc which is default for DROPS/TUDOS
	uncertain dietlibc support in future
	
	* kaffe/kaffevm/systems/drops-l4threads/l4thread.c:
	add dummy jthread_get_status
	
2006-11-10  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/Component.java:
	check for null peer

2006-11-10  Riccardo Mottola <riccardo@kaffe.org>

	Implemented isLightweight for our AWT (returns false except for
	Container, Canvas and Component)

	* libraries/javalib/awt-implementations/kaffe/java/awt/Button.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Checkbox.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Component.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Label.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/MenuComponent.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/ScrollPane.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Scrollbar.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/TextComponent.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Window.java,

2006-11-07  Dalibor Topic  <robilad@kaffe.org>

	Fixed boehm-gc build.
